eyes, face, body done

--- a/index.html
+++ b/index.html
@@ -14,35 +14,40 @@
           <div class="frog-right-eye">
             <div class="frog-right-inner-eye"></div>
           </div>
-        </div>
-
-        <!-- <div class="cat-eyes">
-          <div class="cat-left-eye">
-            <div class="cat-left-inner-eye"></div>
-          </div>
-          <div class="cat-right-eye">
-            <div class="cat-right-inner-eye"></div>
-          </div>
-        </div> -->
-<!--         
-        <div class="cat-nose"></div> -->
-
-        <div class="frog-mouth"></div>
-
-        <div class="cat-whiskers">
-          <div class="cat-whiskers-left">
-            <div class="cat-whisker-left-top"></div>
-            <div class="cat-whisker-left-middle"></div>
-            <div class="cat-whisker-left-bottom"></div>
-          </div>
-          <div class="cat-whiskers-right">
-            <div class="cat-whisker-right-top"></div>
-            <div class="cat-whisker-right-middle"></div>
-            <div class="cat-whisker-right-bottom"></div>
+          <div class="eyebrows">
+            <div class="left-eyebrow"></div>
+            <div class="right-eyebrow"></div>
           </div>
         </div>
+
+        <div class="frog-mouth">
+          <div class="smile">
+
+          </div>
+        </div>
+
+        
       </div>
       
     </main>
 </body>
 </html>
+
+
+<!-- 
+<div class="frog-body">
+  <div class="frog-left-eye">
+    <div class="frog-left-inner-eye"></div>
+  </div>
+  <div class="frog-right-eye">
+    <div class="frog-right-inner-eye"></div>
+  </div>
+  <div class="eyebrows">
+    <div class="left-eyebrow"></div>
+    <div class="right-eyebrow"></div>
+  </div>
+</div>
+
+<div class="frog-mouth">
+  <div class="smile"></div>
+</div> -->
