added eyebrows and moving fly

--- a/index.html
+++ b/index.html
@@ -6,48 +6,24 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <main>
-      <div class="frog-body">
-          <div class="frog-left-eye">
-            <div class="frog-left-inner-eye"></div>
-          </div>
-          <div class="frog-right-eye">
-            <div class="frog-right-inner-eye"></div>
-          </div>
-          <div class="eyebrows">
-            <div class="left-eyebrow"></div>
-            <div class="right-eyebrow"></div>
-          </div>
-        </div>
-
-        <div class="frog-mouth">
-          <div class="smile">
-
-          </div>
-        </div>
-
-        
+  <main>
+    <div class="frog-body">
+      <div class="frog-left-eye">
+        <div class="frog-left-inner-eye"></div>
       </div>
-      
-    </main>
+      <div class="frog-right-eye">
+        <div class="frog-right-inner-eye"></div>
+      </div>
+      <div class="eyebrows">
+        <div class="left-eyebrow"></div>
+        <div class="right-eyebrow"></div>
+      </div>
+    </div>
+    <div class="frog-mouth">
+      <div class="smile"></div>
+    </div>
+    <div class="lilipad"></div>
+    <div class="fly"></div>
+  </main>
 </body>
 </html>
-
-
-<!-- 
-<div class="frog-body">
-  <div class="frog-left-eye">
-    <div class="frog-left-inner-eye"></div>
-  </div>
-  <div class="frog-right-eye">
-    <div class="frog-right-inner-eye"></div>
-  </div>
-  <div class="eyebrows">
-    <div class="left-eyebrow"></div>
-    <div class="right-eyebrow"></div>
-  </div>
-</div>
-
-<div class="frog-mouth">
-  <div class="smile"></div>
-</div> -->
