--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
       <div class="smile"></div>
     </div>
     <div class="lilipad"></div>
+  
+    <div class="left-leg"></div>
+    <div class="right-leg"></div>
+  
     <div class="fly"></div>
+    
+     
   </main>
 </body>
 </html>
