--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     <div class="left-leg"></div>
     <div class="right-leg"></div>
   
+   
+    <div class="foot-one"></div>
+    <div class="foot-two"></div>
+    <div class="foot-three"></div>
+    <div class="foot-four"></div>
+
     <div class="fly"></div>
     
      
